--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.121.3",
-    "@react-three/fiber": "^8.17.12",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.28.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.6.0",
@@ -40,10 +40,8 @@
     "typescript": "^5.7.3"
   },
   "overrides": {
-  "@react-three/drei": {
-    "@react-three/fiber": "^8.0.0"
+    "@react-three/drei": {
+      "@react-three/fiber": "^8.0.0"
+    }
   }
-}
-
-
 }
