--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.121.3",
-    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@react-three/fiber": "^8.18.0",
     "@tabler/icons-react": "^3.28.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
